--- a/src/app/components/menu-item/menu-item.component.scss
+++ b/src/app/components/menu-item/menu-item.component.scss
@@ -2,9 +2,52 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin: 0px 12px;
-    padding: 6px 21px;
-    border: 1px solid lightseagreen;
-    border-radius: 4px;
+    padding: 6px 32px;
     min-width: 86px;
+    cursor: pointer;
+    height: 46px;
+    width: 146px;
+
+    &.root {}
+
+    &:hover {
+        // background-color: cornflowerblue;
+        background: var(--color-background-dark);
+    }
+
+
+}
+
+.menu-dropdown-wrapper {
+    position: absolute;
+    top: 44px;
+    background: var(--color-background);
+    border: 1px solid lightblue;
+    list-style: none;
+    visibility: hidden;
+
+    &.shifted {
+        left: 143px;
+        top: 46px;
+    }
+
+    .menu-drop-list {
+        list-style: none;
+        padding: 0px;
+
+        li {
+            width: 100%;
+            border-bottom: 1px solid lightgray;
+            display: flex;
+            justify-content: center;
+        }
+    }
+}
+
+.menu-item-wrapper:hover+.menu-dropdown-wrapper {
+    visibility: visible;
+}
+
+.menu-dropdown-wrapper:hover {
+    visibility: visible;
 }
