--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,15 @@
 <div class="navbar-wrapper">
-    <div class="logo-wrapper">
-        <img class="logo-image" src="assets/images/logo-placeholder.png" alt="Logo">
-    </div>
-    <div class="menu-wrapper">
-        <div class="menu-items-holder d-flex">
-            <menu-item *ngFor="let item of menuList" [menu]="item"></menu-item>
+    <div class="navbar-left">
+        <div class="logo-wrapper">
+            <img class="logo-image" src="assets/images/logo-placeholder.png" alt="Logo">
         </div>
+        <div class="menu-wrapper">
+            <div class="menu-items-holder d-flex">
+                <menu-item *ngFor="let item of menuList" [menu]="item"></menu-item>
+            </div>
+        </div>
+    </div>
+    <div class="nav-right" (click)="onLogout()">
+        Logout
     </div>
 </div>
