--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,15 +1,34 @@
 .navbar-wrapper {
-    height: 55px;
-    background: lightblue;
+    height: 45px;
+    background: var(--color-background);
     box-shadow: 0px 0px 8px;
     padding: 6px 15px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+
+    .navbar-left {
+        display: flex;
+        align-items: center;
+    }
+
+    .nav-right {
+        cursor: pointer;
+        background: var(--color-background-danger);
+        padding: 10px;
+        border-radius: 50%;
+        height: 64px;
+        width: 64px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: bold;
+    }
 
     .logo-wrapper {
         .logo-image {
-            height: 70px;
-            width: 70px;
+            height: 150px;
+            width: 150px;
         }
     }
 
