--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    height: 100vh;
+}
+
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.link {
+    cursor: pointer;
+    color: var(--color-link);
+}
+
+:root {
+    --color-background: #00a5e3;
+    --color-background-dark: #0065a2;
+    --color-background-danger: #ff5768;
+    --color-link: #125699;
+}
