--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,5 +18,5 @@ html {
     --color-background: #00a5e3;
     --color-background-dark: #0065a2;
     --color-background-danger: #ff5768;
-    --color-link: #125699;
+    --color-link: #6300ff;
 }
